syntax = "proto3";

package product;
option go_package="./product";

message ProductListRequest {
  optional int64 StarId = 1;
  optional string Keyword = 2;
  int64 Page = 3;
  int64 PageSize = 4;
}

message ProductListItem {
  int64 Id = 1;
  string Description = 2;
  double Price = 3;
  string Color = 4;
  string Coverurl = 5;
  string Unit = 6;
}

message ProductCoverUrlRequest {
  int64 ProductId = 1;
}

message ProductCoverUrlResponse {
  int64 id = 1;
  string Url = 2;  
}

message ProductListResponse {
  int64 Total = 1;
  repeated ProductListItem Products = 2;
}

message ProductDetailReqeust {
  int64 Id = 1;
  int64 StarId = 2;
}

message ProductColorRequest {
  int64 ColorId = 1;
}

message ProductColorResponse {
  int64 Id = 1;
  int64 ProductId = 2;
  string Color = 3;
  repeated string Images = 4;
  repeated string DetailImages = 5;
  double price = 6;
  string Unit = 7;
  repeated string AvaliableSizes = 8;
}

message ProductColorListRequest {
  int64 ProductId = 1;
}

message ProductColorListItem {
  int64 ColorId = 1;
  string CoverUrl = 2;
}

message ProductColorListResponse {
  repeated ProductColorListItem Colors = 1;
}

message ProductStockRequest {
  int64 ProductId = 1;
  int64 ColorId = 2;
  string Size = 3;
}

message ProductStockResponse {
  int64 Stock = 1;
}

message ProductComment {
  int64 Id = 1;
  int64 ProductId = 2;
  int64 UserId = 3;
  string Comment = 4;
  double Rate = 5;
  int64 LikeNum = 6;
  int64 CreateAt = 7;
  repeated string Images = 8;
  repeated string ImagesThumb = 9;
  string Size = 10;
  string Color = 11;
}

message ProductCommentListRequest {
  int64 ProductId = 1;
  int64 Cursor = 2;
  int64 Page = 3;
  int64 PageSize = 4;
}

message ProductCommentListResponse {
  repeated ProductComment Comments = 1;
  int64 Total = 2;
}

message ProductDetailResponse {
  int64 Id = 1;
  string Description = 2;
  double Rate = 3;
  int64 ReteCount = 4;
  int64 DefaultColorId = 7;
  int64 SoldNum = 8;
  string Detail = 9;
  int64 StarId = 10;
}

message ProductsInCartListRequest {
  int64 UserId = 1;
  int64 Page = 2;
  int64 PageSize = 3;
}

message ProductsInCartListItem {
  int64 ProductId = 1;
  int64 StarId = 2;
  int64 ColorId = 3;
  int64 Amount = 4;
  string Sizes = 5;
  string Description = 6;
  double Price = 7;
  double TotalPrice = 8;
  string Unit = 9;
  string CoverUrl = 10;
}

message ProducrtsInCartListResponse {
  repeated ProductsInCartListItem Products = 1;
  int64 Total = 2;
}

message AddProductAmountInCartRequest {
  int64 ProductId = 1;
  int64 UserId = 2;
  string Color = 3;
}

message AddProductAmountInCartResponse {}

message DecreaseProductAmountInCartRequest {
  int64 ProductId = 1;
  int64 UserId = 2;
  string Color = 3;
}

message AddProductToCartRequest {
  int64 ProductId = 1;
  int64 UserId = 2;
  int64 ColorId = 4;
  string Size = 3;
}

message AddProductToCartResponse {
  int64 ProductCartId = 1;
}

message RemoveProductFromCartRequest {
  int64 ProductId = 1;
  int64 UserId = 2;
  int64 ColorId = 3;
}

message RemoveProductFromCartResponse {}

service Product {
  rpc ProductList(ProductListRequest) returns (ProductListResponse);
  rpc ProductDetail(ProductDetailReqeust) returns (ProductDetailResponse);
  rpc ProductsInCartList(ProductsInCartListRequest) returns (ProducrtsInCartListResponse);
  rpc AddProductAmountInCart(AddProductAmountInCartRequest) returns (AddProductAmountInCartResponse);
  rpc DecreaseProductAmountInCart(DecreaseProductAmountInCartRequest) returns (AddProductAmountInCartResponse);
  rpc AddProductToCart(AddProductToCartRequest) returns (AddProductToCartResponse);
  rpc RemoveProductFromCart(RemoveProductFromCartRequest) returns (RemoveProductFromCartResponse);
  rpc ProductStock(ProductStockRequest) returns (ProductStockResponse);
  rpc ProductColor(ProductColorRequest) returns (ProductColorResponse);
  rpc ProductColorList(ProductColorListRequest) returns (ProductColorListResponse);
  rpc ProductCommentList(ProductCommentListRequest) returns (ProductCommentListResponse);
}